[package]
name = "introbot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bimap = "0.6.2"
console-subscriber = "0.1.9"
failure = "0.1.8"
# 'next' for global usernames
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = [ "full" ] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
url = "2.3.1"
